--- a/_config.yml
+++ b/_config.yml
@@ -81,7 +81,7 @@ analytics:
 # Site Author
 author:
   name             : "Philip Jacobson"
-  avatar           : "images/Headshot.JPG"
+  avatar           : "Headshot.JPG"
   bio              : "3rd year PhD student at UC Berkeley"
   location         : "Berkeley, CA"
   employer         :
