--- a/_config.yml
+++ b/_config.yml
@@ -102,7 +102,7 @@ author:
   instagram        :
   impactstory      : #"https://profiles.impactstory.org/u/xxxx-xxxx-xxxx-xxxx"
   lastfm           :
-  linkedin         : "https://www.linkedin.com/in/philip-j-b2b972aa/"
+  linkedin         : "philip-j-b2b972aa/"
   orcid            : "https://orcid.org/0000-0001-9957-7464"
   pinterest        :
   soundcloud       :
